--- a/style.css
+++ b/style.css
@@ -2,13 +2,18 @@
     background: #800080;
 }
 
+.desc{
+    text-align: justify;
+    max-width: 400px;
+}
 
 .icon {
     bottom: 50%;
-    width: 3%;
+    width: 2%;
     padding-left: 20px;
     padding-right: 20px ;
     vertical-align:bottom;
+    cursor: pointer;
 }
 
 .allsoc {
